--- a/localisation/simp_chinese/MD_subideology_parties_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_subideology_parties_l_simp_chinese.yml
@@ -1386,38 +1386,38 @@
  TUR.Monarchist: "£TUR_Monarchist 奥斯曼皇室"
  TUR.Monarchist_icon: "£tur_nationalist_monarchist"
  TUR.Monarchist_desc: "奥斯曼王朝是奥斯曼帝国的统治君主，长达600年之久。1922年土耳其独立战争后，该家族被废黜，并被流放（尽管流放后来被解除）。在土耳其，王室的民众支持率仍然很低，因为土耳其人认为土耳其已经从奥斯曼帝国中获得独立，而不是奥斯曼帝国的延续。\n\n该党于军方的§Y地位§!：§R-100§!"
- UKR.conservatism: "£ukr_fatherland 祖国"
- UKR.conservatism_icon: "£ukr_fatherland"
- UKR.conservatism_desc: "(亲西方保守主义) 1999年7月9日，在议会团体和小党的基础上，一个新的政党 - 全乌克兰联盟“祖国” - 成立了制宪代表大会。该党将乌克兰加入欧盟视为战略目标。它支持乌克兰人免签证前往欧盟，并希望取消“羞辱性的签证制度”。"
- UKR.liberalism: "£ukr_solidarity 彼得罗·波罗申科集团“团结党” "
- UKR.liberalism_desc: "(亲西方保守主义) £ukr_solidarity 彼得罗·波罗申科集团“团结党” - 是乌克兰的一个政党，成立于2014年8月27日。然而，它的根源在于2000年成立的一个名为“团结党”的议会团体，此后一直以各种形式存在，作为波罗申科的政治渠道。 该党正式谴责民粹主义，提倡实用主义和现实主义，乌克兰的欧盟成员国身份、贫困公民的福利和社会保护。但实际上仍然是民粹主义波罗申科的傀儡党派。"
- UKR.socialism: "£ukr_sdpu 乌克兰社会民主党"
+ UKR.conservatism: "£ukr_pmu 乌克兰人民运动"
+ UKR.conservatism_icon: "£ukr_pmu"
+ UKR.conservatism_desc: "(亲西方保守主义) £ukr_pmu 乌克兰人民运动 - 是一个中右翼政党。鲁赫运动最初的组织形式是乌克兰人民重建运动（即改革），于1989年成立，是一场公民政治运动，因为除了共产党之外，苏联不允许有其他政党。该组织起源于乌克兰持不同政见者 - 其中最著名的是维亚切斯拉夫·切尔诺维尔。"
+ UKR.liberalism: ""
+ UKR.liberalism_desc: ""
+ UKR.socialism: ""
  UKR.socialism_desc: ""
- UKR.socialism_2017: "£ukr_groysman 格罗伊斯曼的乌克兰战略"
- UKR.socialism_2017_icon: "£ukr_groysman"
+ UKR.socialism_2017: "£ukr_justice 公正党"
+ UKR.socialism_2017_icon: "£ukr_justice"
  UKR.socialism_2017_desc: "(社会民主主义) £ukr_justice 前身为全乌克兰左翼联盟党 “正义”是乌克兰的一个左翼政党。该党于2011年12月合并为新的左翼和农民联合党。正义党领袖斯坦尼斯拉夫·尼科拉恩科成为联合左翼和农民党的第一任党魁。2014年联合左派和农民更名为公正党。"
- UKR.Western_Autocracy: "£UKR_western_autocracy 祖国保卫者党"
+ UKR.Western_Autocracy: ""
  UKR.Western_Autocracy_desc: ""
  UKR.Communist-State: "£ukr_cpu 乌克兰共产党"
  UKR.Communist-State_icon: "£ukr_cpu"
  UKR.Communist-State_desc: "(共产主义) £ukr_cpu 随着苏联解体，该党的前身乌克兰共产党（苏联共产党）被取缔，1991年改制为乌克兰社会党。 1991 年至 1993 年间，乌克兰各地成立了几个小型共产主义组织。 1993 年 3 月 6 日，来自乌克兰各地的“没有明确的合法性”的共产主义者召集全乌克兰共产主义者会议，试图重建乌克兰共产党。作为回应，最高拉达在两个月后将共产党的建立合法化。"
- UKR.Conservative: "£UKR_emerging_kuchma 为了统一的乌克兰！"
- UKR.Conservative_icon: "£UKR_emerging_kuchma"
+ UKR.Conservative: "£ukr_regions 乌克兰地区复兴党"
+ UKR.Conservative_icon: "£ukr_regions"
  UKR.Conservative_desc: "(新兴保守主义) £ukr_regions 乌克兰地区复兴党是一个亲俄政党，成立于1997年底该党声称，在考虑乌克兰的对外经济利益方面，它对乌克兰加入欧盟采取务实的态度；它支持“走欧洲一体化的道路并在社会和经济领域实施各自的标准”。然而，鉴于欧洲金融危机，该党认为乌克兰加入欧盟的问题“纯粹是理论上的”。"
  UKR.Conservative_2001: "£ukr_regions 地区党"
  UKR.Conservative_2001_icon: "£ukr_regions"
  UKR.Conservative_2001_desc: "(新兴保守主义) £ukr_regions 乌克兰地区复兴党是一个亲俄政党，成立于1997年底该党声称，在考虑乌克兰的对外经济利益方面，它对乌克兰加入欧盟采取务实的态度；它支持“走欧洲一体化的道路并在社会和经济领域实施各自的标准”。然而，鉴于欧洲金融危机，该党认为乌克兰加入欧盟的问题“纯粹是理论上的”。"
- UKR.Conservative_2017: "£ukr_opposition 反对纲领 - 终身"
+ UKR.Conservative_2017: "£ukr_opposition 反对党"
  UKR.Conservative_2017_icon: "£ukr_opposition"
  UKR.Conservative_2017_desc: "（新兴保守主义）  £ukr_opposition  反对党集团是一个乌克兰政党，成立于 2014 年，由当时六个不支持“欧洲民主运动”的政党合并。 该党 2014 年的选举计划是社会自由主义和亲俄的。 反对党设想保护俄语作为区域语言的地位，希望乌克兰“最大程度地分权”，不结盟地位，并希望阻止其成为北约成员。"
- UKR.Autocracy: "£ukr_Feminist-Neo-Pegan-Stalinism 人民反对派"
+ UKR.Autocracy: ""
  UKR.Autocracy_desc: ""
- UKR.anarchist_communism: "£UKR_anarchism_communism 左翼力量联盟"
+ UKR.anarchist_communism: ""
  UKR.anarchist_communism_desc: ""
- UKR.Neutral_conservatism: "£ukr_pmu  乌克兰人民运动"
- UKR.Neutral_conservatism_icon: "£ukr_pmu"
- UKR.Neutral_conservatism_desc: "£ukr_pmu 乌克兰人民运动 - 是一个中右翼政党。 鲁赫运动最初的组织形式是乌克兰人民重建运动（即改革），于1989年成立，是一场公民政治运动，因为除了共产党之外，苏联不允许有其他政党。该组织起源于乌克兰持不同政见者——其中最著名的是维亚切斯拉夫·切尔诺维尔。"
- UKR.oligarchism: "£ukr_udar 乌克兰民主改革联盟 - 维塔利·克利奇科"
+ UKR.Neutral_conservatism: "£ukr_fatherland 祖国"
+ UKR.Neutral_conservatism_icon: "£ukr_fatherland"
+ UKR.Neutral_conservatism_desc: "(不结盟保守主义) £ukr_fatherland 1999年7月9日，在议会集团和较小的政党的基础上，成立了一个新的政党 - 全乌克兰联盟“祖国” - 成立了它的制宪大会。该党将乌克兰加入欧盟视为一个战略目标。它支持乌克兰人免签证前往欧盟，并希望取消“屈辱的签证制度”。"
+ UKR.oligarchism: ""
  UKR.oligarchism_desc: ""
  UKR.oligarchism_2017: "£ukr_solidarity 波罗申科集团«团结»"
  UKR.oligarchism_2017_icon: "£ukr_solidarity"
@@ -1430,14 +1430,14 @@
  UKR.Neutral_Libertarian_2017: "£ukr_five_ten 5.10"
  UKR.Neutral_Libertarian_2017_icon: "£ukr_five_ten"
  UKR.Neutral_Libertarian_2017_desc: "(自由主义)  £ukr_five_ten  5.10是一个乌克兰自由主义政党，注册于2014年3月20日。该党的主要思想是对乌克兰税收进行彻底改革：全面废除现行制度并引入单一税收制度——5%的销售税和10%的工资税。该党的主要目标是解决乌克兰的贫困和政府控制问题。"
- UKR.Neutral_Autocracy: "£UKR_neutral_internet 乌克兰互联网党"
+ UKR.Neutral_Autocracy: ""
  UKR.Neutral_Autocracy_desc: ""
- UKR.Neutral_Communism: "£UKR_neutral_communism 乌克兰共产党人联盟"
+ UKR.Neutral_Communism: ""
  UKR.Neutral_Communism_desc: ""
  UKR.Neutral_green: "£ukr_greens 乌克兰绿党"
  UKR.Neutral_green_icon: "£ukr_greens"
  UKR.Neutral_green_desc: "(绿色政治)  £ukr_greens  乌克兰绿党是绿色世界协会（1987年12月成立）的继承者，并以该名义作为民主集团的一部分参加了1990年的乌克兰议会选举。其主要优先事项是改变经济制度中的反生态态度、重建社会制度和保护人权。"
- UKR.Neutral_Muslim_Brotherhood: "£UKR_neutral_muslim 人民党"
+ UKR.Neutral_Muslim_Brotherhood: ""
  UKR.Neutral_Muslim_Brotherhood_desc: ""
  UKR.Nat_Autocracy: ""
  UKR.Nat_Autocracy_desc: ""
@@ -7555,24 +7555,18 @@
  URA.Nat_Populism_icon: "£URA_nat_pop"
  URA.Nat_Autocracy: "£URA_nat_autocracy 乌拉尔自卫队"
  URA.Nat_Autocracy_icon: "£URA_nat_autocracy"
- UKR.Western_Autocracy_icon: "£UKR_western_autocracy"
- UKR.Western_Autocracy_maidan: "£UKR_western_autocracytwo 人民联盟"
- UKR.Western_Autocracy_maidan_icon: "£UKR_western_autocracytwo"
- UKR.Western_Autocracy_maidan_desc: ""
- UKR.liberalism_icon: "£ukr_solidarity"
- UKR.liberalism_two: "£ukr_yes 欧洲团结"
- UKR.liberalism_two_icon: "£ukr_yes"
- UKR.liberalism_two_desc: "(亲西方保守主义)£ukr_solidarity 欧洲团结党 - 是乌克兰的一个政党，成立于2014年8月27日。然而，它的根源在于2000年成立的名为“团结工会”的议会团体，此后一直以各种形式存在，作为彼得罗·波罗申科的政治出路。该党正式谴责民粹主义，提倡实用主义和现实主义。乌克兰的欧盟成员国身份、贫困公民的福利和社会保护。 但实际上仍然是民粹主义波罗申科的傀儡党派。"
- UKR.socialism_2: "£ukr_servant_of_the_people 人民公仆"
- UKR.socialism_2_icon: "£ukr_servant_of_the_people"
- UKR.socialism_2_desc: "社会民主主义 - £ukr_servant_of_the_people 人民公仆党成立于2017年底，以同名热门电视节目命名。该党主要关注大帐篷民粹主义政策，以及亲欧洲外交政策，该党正在特别努力制止乌克兰境内的腐败，并为该国带来更直接的民主。"
- UKR.socialism_icon: "£ukr_sdpu"
- UKR.Autocracy_icon: "£ukr_Feminist-Neo-Pegan-Stalinism"
- UKR.anarchist_communism_icon: "£UKR_anarchism_communism"
- UKR.oligarchism_icon: "£ukr_udar 乌克兰民主改革联盟 - 维塔利·克利奇科"
- UKR.Neutral_Autocracy_icon: "£UKR_neutral_internet"
- UKR.Neutral_Autocracy_shariy: "£ukr_shariy 沙里党"
- UKR.Neutral_Autocracy_shariy_icon: "£ukr_shariy"
- UKR.Neutral_Autocracy_shariy_desc: ""
- UKR.Neutral_Communism_icon: "£UKR_neutral_communism"
- UKR.Neutral_Muslim_Brotherhood_icon: "£UKR_neutral_muslim"
+ UKR.conservatism_2017: "£ukr_civil_position 公民立场"
+ UKR.conservatism_2017_icon: "£ukr_civil_position"
+ UKR.conservatism_2017_desc: "(亲西方保守主义)£ukr_civil_position 公民立场是乌克兰的一个政党，于2005年3月注册，由乌克兰前国防部长阿纳托利·赫里岑科领导。关于正在进行的顿巴斯战争，该党主张使用武力结束冲突。"
+ UKR.liberalism_2017: "£ukr_mnf 新力量"
+ UKR.liberalism_2017_icon: "£ukr_mnf"
+ UKR.liberalism_2017_desc: "(自由主义) £ukr_mnf 新力量运动 - 是一个乌克兰政党，于2017年2月注册，由米哈伊尔·萨卡什维利组建。2017年4月，该党领导人萨卡什维利提议修建一堵大墙，以“暂时将我们自己与分离主义的顿涅茨克人民共和国和卢甘斯克人民共和国隔离开来”，以便“集中精力于乌克兰其他地区”。萨卡什维利对这些分裂主义领土重新回到乌克兰政府的控制之下充满信心，但前提是“在我们战胜腐败并开始快速发展之后”。"
+ UKR.liberalism_2017_2: "£ukr_servant_of_the_people 人民公仆"
+ UKR.liberalism_2017_2_icon: "£ukr_servant_of_the_people"
+ UKR.liberalism_2017_2_desc: "自由主义派 - £ukr_servant_of_the_people 人民公仆党成立于2017年底，以同名热门电视节目命名。该党主要关注大帐篷民粹主义政策，以及亲欧洲外交政策，该党正在特别努力制止乌克兰境内的腐败，并期求为该国带来更直接的民主。"
+ UKR.Vilayat_e_Faqih: ""
+ UKR.Vilayat_e_Faqih_desc: ""
+ UKR.Mod_Vilayat_e_Faqih: ""
+ UKR.Mod_Vilayat_e_Faqih_desc: ""
+ UKR.Caliphate: ""
+ UKR.Caliphate_desc: ""
