HKG focus effect tweak

--- a/localisation/english/MD_focus_HKG_l_english.yml
+++ b/localisation/english/MD_focus_HKG_l_english.yml
@@ -153,9 +153,9 @@
  HKG_gong_hei_fat_coi: "Gong Hei Faat Choy"
  HKG_gong_hei_fat_coi_desc: ""
  HKG_secondary_school_education_reform: "Secondary School Education Reform"
- HKG_secondary_school_education_reform_desc: ""
+ HKG_secondary_school_education_reform_desc: "Secondary Education's old 3-2-2-3 system that used to exist in secondary schools will be reformed into the 3-3-4 Scheme which widely used in the US and China Mainland. This reform will not only remove some overlapping and obsolete but also add some more interesting elective subjects."
  HKG_patriotic_education_curriculum_reform: "Patriotic Education Curriculum Reform"
- HKG_patriotic_education_curriculum_reform_desc: ""
+ HKG_patriotic_education_curriculum_reform_desc: "Patriotic education is missing from the existing Hong Kong education curriculum. We will add Liberal Studies to fill that gap."
  HKG_chinese_based_education_curriculum: "Chinese-Based Education Curriculum"
  HKG_chinese_based_education_curriculum_desc: "We are Chinese, secondly, we are Hong Kong people. All schools in Hong Kong all need to teach in Chinese. All children are expected to speak Chinese."
  HKG_hong_kong_police_force: "Hong Kong Police Force"
@@ -294,6 +294,12 @@
  HKG_improve_trade: "Attract Foreign Investment"
  HKG_improve_trade_desc: ""
  HKG_idea_T_PARK: "T-PARK"
+ HKG_idea_secondary_education_reform: "Secondary Education Reform"
+ HKG_idea_secondary_education_reform_desc: "Secondary Education's old 3-2-2-3 system that used to exist in secondary schools will be reformed into the 3-3-4 Scheme which widely used in the US and China Mainland. This reform will not only remove some overlapping and obsolete but also add some more interesting elective subjects."
+ HKG_idea_patriotic_education_reform: "Patriotic Education Reform"
+ HKG_idea_patriotic_education_reform_desc: "Patriotic education is missing from the existing Hong Kong education curriculum. We will add Liberal Studies to fill that gap."
+ HKG_idea_chinese_based_education_reform: "Chinese-based Education Reform"
+ HKG_idea_chinese_based_education_reform_desc: "All schools in Hong Kong must teach in Chinese. Our children must be able to speak Chinese."
  #Tooltips
  Basic_Law_HKG_idea_tt: "§HThis idea will be cancalled after [HKG.GetFlag]Hong Kong Declare its §RIndependent.§!§!"
  HKG_millitary_block_tt: "§WAs a §YS.A.R§! of §O[CHI.GetFlag]China§!, §Y[HKG.GetFlag]Hong Kong§! is not allowed to have any army and cannot change its military policy.§!"
