--- a/Changelog.txt
+++ b/Changelog.txt
@@ -123,6 +123,13 @@ v1.10.0
  - Added Armenian BMP2 Model (Geo Integration)
  - Shrunk the size of some models
  - Changed the order of the Chinese aircraft models to match the reality
+ - Half a dozen new rifle models
+ - New US infantry model for both US Army and USMC. Only USMC has post 2005 model, US Army will follow soon, before 1.10
+ - A dozen new models for US ground and air vehicles
+ - A few new models for Russia's ground
+ - 3 animated helicopters added each with their own unique sound
+ - Big spring cleaning and streamlining of the entity files to improve readability and future ability to code more complex entity work such as winter/desert variant
+ - Basic work on starting unit variants for both USA and Russia.
 
 v1.9.6
 
