--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -5733,3 +5733,67 @@
  CAB_fascism_ADJ: "Cabinda"
  CAB_communism_ADJ: "Cabinda"
  CAB_nationalist_ADJ: "Cabinda"
+ 
+ KOJ_democratic: "Seventh Republic of Korea"
+ KOJ_democratic_DEF: "The Seventh Republic of Korea"
+ KOJ_communism: "Seventh Republic of Korea"
+ KOJ_communism_DEF: "The Seventh Republic of Korea"
+ KOJ_fascism: "Seventh Republic of Korea"
+ KOJ_fascism_DEF: "The Seventh Republic of Korea"
+ KOJ_neutrality: "Seventh Republic of Korea"
+ KOJ_neutrality_DEF: "The Seventh Republic of Korea"
+ KOJ_nationalist: "Seventh Republic of Korea"
+ KOJ_nationalist_DEF: "The Seventh Republic of Korea"
+ KOJ_democratic_ADJ: "Chilgong Korean"
+ KOJ_communism_ADJ: "Chilgong Korean"
+ KOJ_fascism_ADJ: "Chilgong Korean"
+ KOJ_neutrality_ADJ: "Chilgong Korean"
+ KOJ_nationalist_ADJ: "Chilgong Korean"
+ 
+ JPC_democratic: "National United Government of Japan"
+ JPC_democratic_DEF: "The National United Government of Japan"
+ JPC_communism: "National United Government of Japan"
+ JPC_communism_DEF: "The National United Government of Japan"
+ JPC_fascism: "National United Government of Japan"
+ JPC_fascism_DEF: "The National United Government of Japan"
+ JPC_neutrality: "National United Government of Japan"
+ JPC_neutrality_DEF: "The National United Government of Japan"
+ JPC_nationalist: "National United Government of Japan"
+ JPC_nationalist_DEF: "The National United Government of Japan"
+ JPC_democratic_ADJ: "Protectionist Japanese"
+ JPC_communism_ADJ: "Protectionist Japanese"
+ JPC_fascism_ADJ: "Protectionist Japanese"
+ JPC_neutrality_ADJ: "Protectionist Japanese"
+ JPC_nationalist_ADJ: "Protectionist Japanese"
+ 
+ JPK_democratic: "Nippon Restoration Government"
+ JPK_democratic_DEF: "The Nippon Restoration Government"
+ JPK_communism: "Nippon Restoration Government"
+ JPK_communism_DEF: "The Nippon Restoration Government"
+ JPK_fascism: "Nippon Restoration Government"
+ JPK_fascism_DEF: "The Nippon Restoration Government"
+ JPK_neutrality: "Nippon Restoration Government"
+ JPK_neutrality_DEF: "The Nippon Restoration Government"
+ JPK_nationalist: "Nippon Restoration Government"
+ JPK_nationalist_DEF: "The Nippon Restoration Government"
+ JPK_democratic_ADJ: "Restorationist Japanese"
+ JPK_communism_ADJ: "Restorationist Japanese"
+ JPK_fascism_ADJ: "Restorationist Japanese"
+ JPK_neutrality_ADJ: "Restorationist Japanese"
+ JPK_nationalist_ADJ: "Restorationist Japanese"
+ 
+ JPW_democratic: "Western Provisional State of Japan"
+ JPW_democratic_DEF: "The Western Provisional State of Japan"
+ JPW_communism: "Western Provisional State of Japan"
+ JPW_communism_DEF: "The Western Provisional State of Japan"
+ JPW_fascism: "Western Provisional State of Japan"
+ JPW_fascism_DEF: "The Western Provisional State of Japan"
+ JPW_neutrality: "Western Provisional State of Japan"
+ JPW_neutrality_DEF: "The Western Provisional State of Japan"
+ JPW_nationalist: "Western Provisional State of Japan"
+ JPW_nationalist_DEF: "The Western Provisional State of Japan"
+ JPW_democratic_ADJ: "Provisional Japanese"
+ JPW_communism_ADJ: "Provisional Japanese"
+ JPW_fascism_ADJ: "Provisional Japanese"
+ JPW_neutrality_ADJ: "Provisional Japanese"
+ JPW_nationalist_ADJ: "Provisional Japanese"
