--- a/localisation/english/MD_countries_cosmetic_l_english.yml
+++ b/localisation/english/MD_countries_cosmetic_l_english.yml
@@ -3914,15 +3914,73 @@
  HEZ_amel_DEF: "the Jabal Amil"
  
  #Ryukyu
- JAP_RYU_democratic: "Okinawa autonomous region"
- JAP_RYU_democratic_ADJ: "Okinawa"
- JAP_RYU_democratic_DEF: "Okinawa autonomous region"
- JAP_RYU_communism: "Okinawa autonomous region"
- JAP_RYU_communism_ADJ: "Okinawa"
- JAP_RYU_communism_DEF: "Okinawa autonomous region"
- JAP_RYU_nationalist: "Okinawa"
- JAP_RYU_nationalist_ADJ: "Okinawa"
- JAP_RYU_nationalist_DEF: "Okinawa"
- JAP_RYU_fascism: "Okinawa"
- JAP_RYU_fascism_ADJ: "Okinawa"
- JAP_RYU_fascism_DEF: "Okinawa"
+ RYU_JAP_democratic_autonomy_associated_state: "Okinawa Autonomous Province"
+ RYU_JAP_democratic_autonomy_associated_state_DEF: "The Okinawa Autonomous Province"
+ RYU_JAP_communism_autonomy_associated_state: "Okinawa Autonomous Province"
+ RYU_JAP_communism_autonomy_associated_state_DEF: "The Okinawa Autonomous Province"
+ RYU_JAP_fascism_autonomy_associated_state: "Okinawa Autonomous Province"
+ RYU_JAP_fascism_autonomy_associated_state_DEF: "The Okinawa Autonomous Province"
+ RYU_JAP_neutrality_autonomy_associated_state: "Okinawa Autonomous Province"
+ RYU_JAP_neutrality_autonomy_associated_state_DEF: "The Okinawa Autonomous Province"
+ RYU_JAP_nationalist_autonomy_associated_state: "Okinawa Autonomous Province"
+ RYU_JAP_nationalist_autonomy_associated_state_DEF: "The Okinawa Autonomous Province"
+ RYU_JAP_democratic_autonomy_satellite_state: "Okinawa Autonomous Prefecture"
+ RYU_JAP_democratic_autonomy_satellite_state_DEF: "The Okinawa Autonomous Prefecture"
+ RYU_JAP_communism_autonomy_satellite_state: "Okinawa Autonomous Prefecture"
+ RYU_JAP_communism_autonomy_satellite_state_DEF: "The Okinawa Autonomous Prefecture"
+ RYU_JAP_fascism_autonomy_satellite_state: "Okinawa Autonomous Prefecture"
+ RYU_JAP_fascism_autonomy_satellite_state_DEF: "The Okinawa Autonomous Prefecture"
+ RYU_JAP_neutrality_autonomy_satellite_state: "Okinawa Autonomous Prefecture"
+ RYU_JAP_neutrality_autonomy_satellite_state_DEF: "The Okinawa Autonomous Prefecture"
+ RYU_JAP_nationalist_autonomy_satellite_state: "Okinawa Autonomous Prefecture"
+ RYU_JAP_nationalist_autonomy_satellite_state_DEF: "The Okinawa Autonomous Prefecture"
+ RYU_JAP_democratic_autonomy_puppet_state: "Okinawa Prefecture"
+ RYU_JAP_democratic_autonomy_puppet_state_DEF: "The Okinawa Prefecture"
+ RYU_JAP_communism_autonomy_puppet_state: "Okinawa Prefecture"
+ RYU_JAP_communism_autonomy_puppet_state_DEF: "The Okinawa Prefecture"
+ RYU_JAP_fascism_autonomy_puppet_state: "Okinawa Prefecture"
+ RYU_JAP_fascism_autonomy_puppet_state_DEF: "The Okinawa Prefecture"
+ RYU_JAP_neutrality_autonomy_puppet_state: "Okinawa Prefecture"
+ RYU_JAP_neutrality_autonomy_puppet_state_DEF: "The Okinawa Prefecture"
+ RYU_JAP_nationalist_autonomy_puppet_state: "Okinawa Prefecture"
+ RYU_JAP_nationalist_autonomy_puppet_state_DEF: "The Okinawa Prefecture"
+ RYU_JAP_democratic_autonomy_autonomous_state: "Okinawa Prefecture"
+ RYU_JAP_democratic_autonomy_autonomous_state_DEF: "The Okinawa Prefecture"
+ RYU_JAP_communism_autonomy_autonomous_state: "Okinawa Prefecture"
+ RYU_JAP_communism_autonomy_autonomous_state_DEF: "The Okinawa Prefecture"
+ RYU_JAP_fascism_autonomy_autonomous_state: "Okinawa Prefecture"
+ RYU_JAP_fascism_autonomy_autonomous_state_DEF: "The Okinawa Prefecture"
+ RYU_JAP_neutrality_autonomy_autonomous_state: "Okinawa Prefecture"
+ RYU_JAP_neutrality_autonomy_autonomous_state_DEF: "The Okinawa Prefecture"
+ RYU_JAP_nationalist_autonomy_autonomous_state: "Okinawa Prefecture"
+ RYU_JAP_nationalist_autonomy_autonomous_state_DEF: "The Okinawa Prefecture"
+ RYU_CHI_democratic: "Chongsheng Autonomous Province"
+ RYU_CHI_democratic_DEF: "The Chongsheng Autonomous Province"
+ RYU_CHI_communism: "Chongsheng Autonomous Province"
+ RYU_CHI_communism_DEF: "The Chongsheng Autonomous Province"
+ RYU_CHI_fascism: "Chongsheng Autonomous Province"
+ RYU_CHI_fascism_DEF: "The Chongsheng Autonomous Province"
+ RYU_CHI_neutrality: "Chongsheng Autonomous Province"
+ RYU_CHI_neutrality_DEF: "The Chongsheng Autonomous Province"
+ RYU_CHI_nationalist: "Chongsheng Autonomous Province"
+ RYU_CHI_nationalist_DEF: "The Chongsheng Autonomous Province"
+ RYU_TAI_democratic: "Chongsheng Autonomous Province"
+ RYU_TAI_democratic_DEF: "The Chongsheng Autonomous Province"
+ RYU_TAI_communism: "Chongsheng Autonomous Province"
+ RYU_TAI_communism_DEF: "The Chongsheng Autonomous Province"
+ RYU_TAI_fascism: "Chongsheng Autonomous Province"
+ RYU_TAI_fascism_DEF: "The Chongsheng Autonomous Province"
+ RYU_TAI_neutrality: "Chongsheng Autonomous Province"
+ RYU_TAI_neutrality_DEF: "The Chongsheng Autonomous Province"
+ RYU_TAI_nationalist: "Chongsheng Autonomous Province"
+ RYU_TAI_nationalist_DEF: "The Chongsheng Autonomous Province"
+ RYU_USA_democratic: "Government of The Ryukyu Islands"
+ RYU_USA_democratic_DEF: "The Government of the Ryukyu Islands"
+ RYU_USA_communism: "Government of The Ryukyu Islands"
+ RYU_USA_communism_DEF: "The Government of the Ryukyu Islands"
+ RYU_USA_fascism: "Government of The Ryukyu Islands"
+ RYU_USA_fascism_DEF: "The Government of the Ryukyu Islands"
+ RYU_USA_neutrality: "Government of The Ryukyu Islands"
+ RYU_USA_neutrality_DEF: "The Government of the Ryukyu Islands"
+ RYU_USA_nationalist: "Government of The Ryukyu Islands"
+ RYU_USA_nationalist_DEF: "The Government of the Ryukyu Islands"
