Some periphery work

--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -2965,171 +2965,21 @@
  IRQ_nationalist_DEF: "Iraq"
  IRQ_nationalist_ADJ: "Iraqi"
 
- JAP_democratic: "State of Japan"
- JAP_democratic_DEF: "State of Japan"
- JAP_communism: "State of Japan"
- JAP_communism_DEF: "State of Japan"
- JAP_fascism: "State of Japan"
- JAP_fascism_DEF: "State of Japan"
- JAP_neutrality: "State of Japan"
- JAP_neutrality_DEF: "State of Japan"
- JAP_nationalist: "State of Japan"
- JAP_nationalist_DEF: "State of Japan"
- JAP_democratic_ADJ: "Japanese"
- JAP_communism_ADJ: "Japanese"
+ JAP_fascism: "Japan"
+ JAP_fascism_DEF: "Japan"
+ JAP_democratic: "Japan"
+ JAP_democratic_DEF: "Japan"
+ JAP_neutrality: "Japan"
+ JAP_neutrality_DEF: "Japan"
+ JAP_communism: "Japan"
+ JAP_communism_DEF: "Japan"
  JAP_fascism_ADJ: "Japanese"
+ JAP_democratic_ADJ: "Japanese"
  JAP_neutrality_ADJ: "Japanese"
+ JAP_communism_ADJ: "Japanese"
+ JAP_nationalist: "Japan"
+ JAP_nationalist_DEF: "Japan"
  JAP_nationalist_ADJ: "Japanese"
- JAP_western_autocracy_democratic: "State of Japan"
- JAP_western_conservatism_democratic: "State of Japan"
- JAP_western_liberalism_democratic: "State of Japan"
- JAP_western_socialism_democratic: "State of Japan"
- JAP_western_autocracy_democratic_DEF: "State of Japan"
- JAP_western_conservatism_democratic_DEF: "State of Japan"
- JAP_western_liberalism_democratic_DEF: "State of Japan"
- JAP_western_socialism_democratic_DEF: "State of Japan"
- JAP_emerging_anarchist_communism_communism: "State of Japan"
- JAP_emerging_autocracy_communism: "State of Japan"
- JAP_emerging_communist_state_communism: "State of Japan"
- JAP_emerging_conservative_communism: "State of Japan"
- JAP_emerging_mod_vilayat_communism: "State of Japan"
- JAP_emerging_vilayat_communism: "State of Japan"
- JAP_emerging_anarchist_communism_communism_DEF: "State of Japan"
- JAP_emerging_autocracy_communism_DEF: "State of Japan"
- JAP_emerging_communist_state_communism_DEF: "State of Japan"
- JAP_emerging_conservative_communism_DEF: "State of Japan"
- JAP_emerging_mod_vilayat_communism_DEF: "State of Japan"
- JAP_emerging_vilayat_communism_DEF: "State of Japan"
- JAP_salafist_caliphate_fascism: "State of Japan"
- JAP_salafist_kingdom_fascism: "State of Japan"
- JAP_salafist_caliphate_fascism_DEF: "State of Japan"
- JAP_salafist_kingdom_fascism_DEF: "State of Japan"
- JAP_neutral_autocracy_neutrality: "State of Japan"
- JAP_neutral_communism_neutrality: "State of Japan"
- JAP_neutral_conservatism_neutrality: "State of Japan"
- JAP_neutral_green_neutrality: "State of Japan"
- JAP_neutral_liberatarian_neutrality: "State of Japan"
- JAP_neutral_muslim_brotherhood_neutrality: "State of Japan"
- JAP_neutral_oligarchism_neutrality: "State of Japan"
- JAP_neutral_social_neutrality: "State of Japan"
- JAP_neutral_autocracy_neutrality_DEF: "State of Japan"
- JAP_neutral_communism_neutrality_DEF: "State of Japan"
- JAP_neutral_conservatism_neutrality_DEF: "State of Japan"
- JAP_neutral_green_neutrality_DEF: "State of Japan"
- JAP_neutral_liberatarian_neutrality_DEF: "State of Japan"
- JAP_neutral_muslim_brotherhood_neutrality_DEF: "State of Japan"
- JAP_neutral_oligarchism_neutrality_DEF: "State of Japan"
- JAP_neutral_social_neutrality_DEF: "State of Japan"
- JAP_nationalist_autocracy_nationalist: "State of Japan"
- JAP_nationalist_fascism_nationalist: "State of Japan"
- JAP_nationalist_monarchist_nationalist: "State of Japan"
- JAP_nationalist_populism_nationalist: "State of Japan"
- JAP_nationalist_autocracy_nationalist_DEF: "State of Japan"
- JAP_nationalist_fascism_nationalist_DEF: "State of Japan"
- JAP_nationalist_monarchist_nationalist_DEF: "State of Japan"
- JAP_nationalist_populism_nationalist_DEF: "State of Japan"
-
- RYU_JAP_democratic_autonomy_associated_state: "Okinawa Autonomous Province"
- RYU_JAP_democratic_autonomy_associated_state_DEF: "The Okinawa Autonomous Province"
- RYU_JAP_communism_autonomy_associated_state: "Okinawa Autonomous Province"
- RYU_JAP_communism_autonomy_associated_state_DEF: "The Okinawa Autonomous Province"
- RYU_JAP_fascism_autonomy_associated_state: "Okinawa Autonomous Province"
- RYU_JAP_fascism_autonomy_associated_state_DEF: "The Okinawa Autonomous Province"
- RYU_JAP_neutrality_autonomy_associated_state: "Okinawa Autonomous Province"
- RYU_JAP_neutrality_autonomy_associated_state_DEF: "The Okinawa Autonomous Province"
- RYU_JAP_nationalist_autonomy_associated_state: "Okinawa Autonomous Province"
- RYU_JAP_nationalist_autonomy_associated_state_DEF: "The Okinawa Autonomous Province"
- RYU_JAP_democratic_autonomy_satellite_state: "Okinawa Autonomous Prefecture"
- RYU_JAP_democratic_autonomy_satellite_state_DEF: "The Okinawa Autonomous Prefecture"
- RYU_JAP_communism_autonomy_satellite_state: "Okinawa Autonomous Prefecture"
- RYU_JAP_communism_autonomy_satellite_state_DEF: "The Okinawa Autonomous Prefecture"
- RYU_JAP_fascism_autonomy_satellite_state: "Okinawa Autonomous Prefecture"
- RYU_JAP_fascism_autonomy_satellite_state_DEF: "The Okinawa Autonomous Prefecture"
- RYU_JAP_neutrality_autonomy_satellite_state: "Okinawa Autonomous Prefecture"
- RYU_JAP_neutrality_autonomy_satellite_state_DEF: "The Okinawa Autonomous Prefecture"
- RYU_JAP_nationalist_autonomy_satellite_state: "Okinawa Autonomous Prefecture"
- RYU_JAP_nationalist_autonomy_satellite_state_DEF: "The Okinawa Autonomous Prefecture"
- RYU_JAP_democratic_autonomy_puppet_state: "Okinawa Prefecture"
- RYU_JAP_democratic_autonomy_puppet_state_DEF: "The Okinawa Prefecture"
- RYU_JAP_communism_autonomy_puppet_state: "Okinawa Prefecture"
- RYU_JAP_communism_autonomy_puppet_state_DEF: "The Okinawa Prefecture"
- RYU_JAP_fascism_autonomy_puppet_state: "Okinawa Prefecture"
- RYU_JAP_fascism_autonomy_puppet_state_DEF: "The Okinawa Prefecture"
- RYU_JAP_neutrality_autonomy_puppet_state: "Okinawa Prefecture"
- RYU_JAP_neutrality_autonomy_puppet_state_DEF: "The Okinawa Prefecture"
- RYU_JAP_nationalist_autonomy_puppet_state: "Okinawa Prefecture"
- RYU_JAP_nationalist_autonomy_puppet_state_DEF: "The Okinawa Prefecture"
- RYU_JAP_democratic_autonomy_autonomous_state: "Okinawa Prefecture"
- RYU_JAP_democratic_autonomy_autonomous_state_DEF: "The Okinawa Prefecture"
- RYU_JAP_communism_autonomy_autonomous_state: "Okinawa Prefecture"
- RYU_JAP_communism_autonomy_autonomous_state_DEF: "The Okinawa Prefecture"
- RYU_JAP_fascism_autonomy_autonomous_state: "Okinawa Prefecture"
- RYU_JAP_fascism_autonomy_autonomous_state_DEF: "The Okinawa Prefecture"
- RYU_JAP_neutrality_autonomy_autonomous_state: "Okinawa Prefecture"
- RYU_JAP_neutrality_autonomy_autonomous_state_DEF: "The Okinawa Prefecture"
- RYU_JAP_nationalist_autonomy_autonomous_state: "Okinawa Prefecture"
- RYU_JAP_nationalist_autonomy_autonomous_state_DEF: "The Okinawa Prefecture"
- RYU_CHI_democratic: "Chongsheng Autonomous Province"
- RYU_CHI_democratic_DEF: "The Chongsheng Autonomous Province"
- RYU_CHI_communism: "Chongsheng Autonomous Province"
- RYU_CHI_communism_DEF: "The Chongsheng Autonomous Province"
- RYU_CHI_fascism: "Chongsheng Autonomous Province"
- RYU_CHI_fascism_DEF: "The Chongsheng Autonomous Province"
- RYU_CHI_neutrality: "Chongsheng Autonomous Province"
- RYU_CHI_neutrality_DEF: "The Chongsheng Autonomous Province"
- RYU_CHI_nationalist: "Chongsheng Autonomous Province"
- RYU_CHI_nationalist_DEF: "The Chongsheng Autonomous Province"
- RYU_TAI_democratic: "Chongsheng Autonomous Province"
- RYU_TAI_democratic_DEF: "The Chongsheng Autonomous Province"
- RYU_TAI_communism: "Chongsheng Autonomous Province"
- RYU_TAI_communism_DEF: "The Chongsheng Autonomous Province"
- RYU_TAI_fascism: "Chongsheng Autonomous Province"
- RYU_TAI_fascism_DEF: "The Chongsheng Autonomous Province"
- RYU_TAI_neutrality: "Chongsheng Autonomous Province"
- RYU_TAI_neutrality_DEF: "The Chongsheng Autonomous Province"
- RYU_TAI_nationalist: "Chongsheng Autonomous Province"
- RYU_TAI_nationalist_DEF: "The Chongsheng Autonomous Province"
- RYU_USA_democratic: "Government of The Ryukyu Islands"
- RYU_USA_democratic_DEF: "The Government of the Ryukyu Islands"
- RYU_USA_communism: "Government of The Ryukyu Islands"
- RYU_USA_communism_DEF: "The Government of the Ryukyu Islands"
- RYU_USA_fascism: "Government of The Ryukyu Islands"
- RYU_USA_fascism_DEF: "The Government of the Ryukyu Islands"
- RYU_USA_neutrality: "Government of The Ryukyu Islands"
- RYU_USA_neutrality_DEF: "The Government of the Ryukyu Islands"
- RYU_USA_nationalist: "Government of The Ryukyu Islands"
- RYU_USA_nationalist_DEF: "The Government of the Ryukyu Islands"
- RYU_democratic: "Ryukyu"
- RYU_democratic_DEF: "The Republic of Ryukyu"
- RYU_communism: "Ryukyu"
- RYU_communism_DEF: "The Republic of Ryukyu"
- RYU_fascism: "Ryukyu"
- RYU_fascism_DEF: "The Republic of Ryukyu"
- RYU_neutrality: "Ryukyu"
- RYU_neutrality_DEF: "The Republic of Ryukyu"
- RYU_nationalist: "Ryukyu"
- RYU_nationalist_DEF: "The Republic of Ryukyu"
- RYU_democratic_ADJ: "Ryukyuan"
- RYU_communism_ADJ: "Ryukyuan"
- RYU_fascism_ADJ: "Ryukyuan"
- RYU_neutrality_ADJ: "Ryukyuan"
- RYU_nationalist_ADJ: "Ryukyuan"
-
- KOJ_democratic: "Seventh Republic of Korea"
- KOJ_democratic_DEF: "The Seventh Republic of Korea"
- KOJ_communism: "Seventh Republic of Korea"
- KOJ_communism_DEF: "The Seventh Republic of Korea"
- KOJ_fascism: "Seventh Republic of Korea"
- KOJ_fascism_DEF: "The Seventh Republic of Korea"
- KOJ_neutrality: "Seventh Republic of Korea"
- KOJ_neutrality_DEF: "The Seventh Republic of Korea"
- KOJ_nationalist: "Seventh Republic of Korea"
- KOJ_nationalist_DEF: "The Seventh Republic of Korea"
- KOJ_democratic_ADJ: "Chilgong Korean"
- KOJ_communism_ADJ: "Chilgong Korean"
- KOJ_fascism_ADJ: "Chilgong Korean"
- KOJ_neutrality_ADJ: "Chilgong Korean"
- KOJ_nationalist_ADJ: "Chilgong Korean"
 
  MEX_fascism: "Mexico"
  MEX_fascism_DEF: "Mexico"
@@ -5883,3 +5733,67 @@
  CAB_fascism_ADJ: "Cabinda"
  CAB_communism_ADJ: "Cabinda"
  CAB_nationalist_ADJ: "Cabinda"
+ 
+ KOJ_democratic: "Seventh Republic of Korea"
+ KOJ_democratic_DEF: "The Seventh Republic of Korea"
+ KOJ_communism: "Seventh Republic of Korea"
+ KOJ_communism_DEF: "The Seventh Republic of Korea"
+ KOJ_fascism: "Seventh Republic of Korea"
+ KOJ_fascism_DEF: "The Seventh Republic of Korea"
+ KOJ_neutrality: "Seventh Republic of Korea"
+ KOJ_neutrality_DEF: "The Seventh Republic of Korea"
+ KOJ_nationalist: "Seventh Republic of Korea"
+ KOJ_nationalist_DEF: "The Seventh Republic of Korea"
+ KOJ_democratic_ADJ: "Chilgong Korean"
+ KOJ_communism_ADJ: "Chilgong Korean"
+ KOJ_fascism_ADJ: "Chilgong Korean"
+ KOJ_neutrality_ADJ: "Chilgong Korean"
+ KOJ_nationalist_ADJ: "Chilgong Korean"
+ 
+ JPC_democratic: "National United Government of Japan"
+ JPC_democratic_DEF: "The National United Government of Japan"
+ JPC_communism: "National United Government of Japan"
+ JPC_communism_DEF: "The National United Government of Japan"
+ JPC_fascism: "National United Government of Japan"
+ JPC_fascism_DEF: "The National United Government of Japan"
+ JPC_neutrality: "National United Government of Japan"
+ JPC_neutrality_DEF: "The National United Government of Japan"
+ JPC_nationalist: "National United Government of Japan"
+ JPC_nationalist_DEF: "The National United Government of Japan"
+ JPC_democratic_ADJ: "Protectionist Japanese"
+ JPC_communism_ADJ: "Protectionist Japanese"
+ JPC_fascism_ADJ: "Protectionist Japanese"
+ JPC_neutrality_ADJ: "Protectionist Japanese"
+ JPC_nationalist_ADJ: "Protectionist Japanese"
+ 
+ JPK_democratic: "Nippon Restoration Government"
+ JPK_democratic_DEF: "The Nippon Restoration Government"
+ JPK_communism: "Nippon Restoration Government"
+ JPK_communism_DEF: "The Nippon Restoration Government"
+ JPK_fascism: "Nippon Restoration Government"
+ JPK_fascism_DEF: "The Nippon Restoration Government"
+ JPK_neutrality: "Nippon Restoration Government"
+ JPK_neutrality_DEF: "The Nippon Restoration Government"
+ JPK_nationalist: "Nippon Restoration Government"
+ JPK_nationalist_DEF: "The Nippon Restoration Government"
+ JPK_democratic_ADJ: "Restorationist Japanese"
+ JPK_communism_ADJ: "Restorationist Japanese"
+ JPK_fascism_ADJ: "Restorationist Japanese"
+ JPK_neutrality_ADJ: "Restorationist Japanese"
+ JPK_nationalist_ADJ: "Restorationist Japanese"
+ 
+ JPW_democratic: "Western Provisional State of Japan"
+ JPW_democratic_DEF: "The Western Provisional State of Japan"
+ JPW_communism: "Western Provisional State of Japan"
+ JPW_communism_DEF: "The Western Provisional State of Japan"
+ JPW_fascism: "Western Provisional State of Japan"
+ JPW_fascism_DEF: "The Western Provisional State of Japan"
+ JPW_neutrality: "Western Provisional State of Japan"
+ JPW_neutrality_DEF: "The Western Provisional State of Japan"
+ JPW_nationalist: "Western Provisional State of Japan"
+ JPW_nationalist_DEF: "The Western Provisional State of Japan"
+ JPW_democratic_ADJ: "Provisional Japanese"
+ JPW_communism_ADJ: "Provisional Japanese"
+ JPW_fascism_ADJ: "Provisional Japanese"
+ JPW_neutrality_ADJ: "Provisional Japanese"
+ JPW_nationalist_ADJ: "Provisional Japanese"
