Some periphery work

--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -2965,21 +2965,70 @@
  IRQ_nationalist_DEF: "Iraq"
  IRQ_nationalist_ADJ: "Iraqi"
 
- JAP_fascism: "Japan"
- JAP_fascism_DEF: "Japan"
- JAP_democratic: "Japan"
- JAP_democratic_DEF: "Japan"
- JAP_neutrality: "Japan"
- JAP_neutrality_DEF: "Japan"
- JAP_communism: "Japan"
- JAP_communism_DEF: "Japan"
+ JAP_fascism: "State of Japan"
+ JAP_fascism_DEF: "State of Japan"
+ JAP_democratic: "State of Japan"
+ JAP_democratic_DEF: "State of Japan"
+ JAP_neutrality: "State of Japan"
+ JAP_neutrality_DEF: "State of Japan"
+ JAP_communism: "State of Japan"
+ JAP_communism_DEF: "State of Japan"
  JAP_fascism_ADJ: "Japanese"
  JAP_democratic_ADJ: "Japanese"
  JAP_neutrality_ADJ: "Japanese"
  JAP_communism_ADJ: "Japanese"
- JAP_nationalist: "Japan"
- JAP_nationalist_DEF: "Japan"
+ JAP_nationalist: "State of Japan"
+ JAP_nationalist_DEF: "State of Japan"
  JAP_nationalist_ADJ: "Japanese"
+ JAP_western_autocracy_democratic: "State of Japan"
+ JAP_western_conservatism_democratic: "State of Japan"
+ JAP_western_liberalism_democratic: "State of Japan"
+ JAP_western_socialism_democratic: "State of Japan"
+ JAP_western_autocracy_democratic_DEF: "State of Japan"
+ JAP_western_conservatism_democratic_DEF: "State of Japan"
+ JAP_western_liberalism_democratic_DEF: "State of Japan"
+ JAP_western_socialism_democratic_DEF: "State of Japan"
+ JAP_emerging_anarchist_communism_communism: "State of Japan"
+ JAP_emerging_autocracy_communism: "State of Japan"
+ JAP_emerging_communist_state_communism: "State of Japan"
+ JAP_emerging_conservative_communism: "State of Japan"
+ JAP_emerging_mod_vilayat_communism: "State of Japan"
+ JAP_emerging_vilayat_communism: "State of Japan"
+ JAP_emerging_anarchist_communism_communism_DEF: "State of Japan"
+ JAP_emerging_autocracy_communism_DEF: "State of Japan"
+ JAP_emerging_communist_state_communism_DEF: "State of Japan"
+ JAP_emerging_conservative_communism_DEF: "State of Japan"
+ JAP_emerging_mod_vilayat_communism_DEF: "State of Japan"
+ JAP_emerging_vilayat_communism_DEF: "State of Japan"
+ JAP_salafist_caliphate_fascism: "State of Japan"
+ JAP_salafist_kingdom_fascism: "State of Japan"
+ JAP_salafist_caliphate_fascism_DEF: "State of Japan"
+ JAP_salafist_kingdom_fascism_DEF: "State of Japan"
+ JAP_neutral_autocracy_neutrality: "State of Japan"
+ JAP_neutral_communism_neutrality: "State of Japan"
+ JAP_neutral_conservatism_neutrality: "State of Japan"
+ JAP_neutral_green_neutrality: "State of Japan"
+ JAP_neutral_liberatarian_neutrality: "State of Japan"
+ JAP_neutral_muslim_brotherhood_neutrality: "State of Japan"
+ JAP_neutral_oligarchism_neutrality: "State of Japan"
+ JAP_neutral_social_neutrality: "State of Japan"
+ JAP_neutral_autocracy_neutrality_DEF: "State of Japan"
+ JAP_neutral_communism_neutrality_DEF: "State of Japan"
+ JAP_neutral_conservatism_neutrality_DEF: "State of Japan"
+ JAP_neutral_green_neutrality_DEF: "State of Japan"
+ JAP_neutral_liberatarian_neutrality_DEF: "State of Japan"
+ JAP_neutral_muslim_brotherhood_neutrality_DEF: "State of Japan"
+ JAP_neutral_oligarchism_neutrality_DEF: "State of Japan"
+ JAP_neutral_social_neutrality_DEF: "State of Japan"
+ JAP_nationalist_autocracy_nationalist: "State of Japan"
+ JAP_nationalist_fascism_nationalist: "State of Japan"
+ JAP_nationalist_monarchist_nationalist: "State of Japan"
+ JAP_nationalist_populism_nationalist: "State of Japan"
+ JAP_nationalist_autocracy_nationalist_DEF: "State of Japan"
+ JAP_nationalist_fascism_nationalist_DEF: "State of Japan"
+ JAP_nationalist_monarchist_nationalist_DEF: "State of Japan"
+ JAP_nationalist_populism_nationalist_DEF: "State of Japan"
+ 
 
  MEX_fascism: "Mexico"
  MEX_fascism_DEF: "Mexico"
