Small adjustment of China

--- a/localisation/simp_chinese/MD_countries_cosmetic_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_countries_cosmetic_l_simp_chinese.yml
@@ -3525,15 +3525,73 @@
  SER_serbia_tag: "塞尔维亚"
  SER_serbia_tag_DEF: "塞尔维亚"
  SER_serbia_tag_ADJ: "塞尔维亚"
- JAP_RYU_democratic: "冲绳自治区"
- JAP_RYU_democratic_ADJ: "冲绳"
- JAP_RYU_democratic_DEF: "冲绳自治区"
- JAP_RYU_communism: "冲绳自治区"
- JAP_RYU_communism_ADJ: "冲绳"
- JAP_RYU_communism_DEF: "冲绳自治区"
- JAP_RYU_nationalist: "冲绳"
- JAP_RYU_nationalist_ADJ: "冲绳"
- JAP_RYU_nationalist_DEF: "冲绳"
- JAP_RYU_fascism: "冲绳"
- JAP_RYU_fascism_ADJ: "冲绳"
- JAP_RYU_fascism_DEF: "冲绳"
+ RYU_JAP_democratic_autonomy_associated_state: "冲绳自治省"
+ RYU_JAP_democratic_autonomy_associated_state_DEF: "冲绳自治省"
+ RYU_JAP_communism_autonomy_associated_state: "冲绳自治省"
+ RYU_JAP_communism_autonomy_associated_state_DEF: "冲绳自治省"
+ RYU_JAP_fascism_autonomy_associated_state: "冲绳自治省"
+ RYU_JAP_fascism_autonomy_associated_state_DEF: "冲绳自治省"
+ RYU_JAP_neutrality_autonomy_associated_state: "冲绳自治省"
+ RYU_JAP_neutrality_autonomy_associated_state_DEF: "冲绳自治省"
+ RYU_JAP_nationalist_autonomy_associated_state: "冲绳自治省"
+ RYU_JAP_nationalist_autonomy_associated_state_DEF: "冲绳自治省"
+ RYU_JAP_democratic_autonomy_satellite_state: "冲绳自治县"
+ RYU_JAP_democratic_autonomy_satellite_state_DEF: "冲绳自治县"
+ RYU_JAP_communism_autonomy_satellite_state: "冲绳自治县"
+ RYU_JAP_communism_autonomy_satellite_state_DEF: "冲绳自治县"
+ RYU_JAP_fascism_autonomy_satellite_state: "冲绳自治县"
+ RYU_JAP_fascism_autonomy_satellite_state_DEF: "冲绳自治县"
+ RYU_JAP_neutrality_autonomy_satellite_state: "冲绳自治县"
+ RYU_JAP_neutrality_autonomy_satellite_state_DEF: "冲绳自治县"
+ RYU_JAP_nationalist_autonomy_satellite_state: "冲绳自治县"
+ RYU_JAP_nationalist_autonomy_satellite_state_DEF: "冲绳自治县"
+ RYU_JAP_democratic_autonomy_puppet_state: "冲绳县"
+ RYU_JAP_democratic_autonomy_puppet_state_DEF: "冲绳县"
+ RYU_JAP_communism_autonomy_puppet_state: "冲绳县"
+ RYU_JAP_communism_autonomy_puppet_state_DEF: "冲绳县"
+ RYU_JAP_fascism_autonomy_puppet_state: "冲绳县"
+ RYU_JAP_fascism_autonomy_puppet_state_DEF: "冲绳县"
+ RYU_JAP_neutrality_autonomy_puppet_state: "冲绳县"
+ RYU_JAP_neutrality_autonomy_puppet_state_DEF: "冲绳县"
+ RYU_JAP_nationalist_autonomy_puppet_state: "冲绳县"
+ RYU_JAP_nationalist_autonomy_puppet_state_DEF: "冲绳县"
+ RYU_JAP_democratic_autonomy_autonomous_state: "冲绳县"
+ RYU_JAP_democratic_autonomy_autonomous_state_DEF: "冲绳县"
+ RYU_JAP_communism_autonomy_autonomous_state: "冲绳县"
+ RYU_JAP_communism_autonomy_autonomous_state_DEF: "冲绳县"
+ RYU_JAP_fascism_autonomy_autonomous_state: "冲绳县"
+ RYU_JAP_fascism_autonomy_autonomous_state_DEF: "冲绳县"
+ RYU_JAP_neutrality_autonomy_autonomous_state: "冲绳县"
+ RYU_JAP_neutrality_autonomy_autonomous_state_DEF: "冲绳县"
+ RYU_JAP_nationalist_autonomy_autonomous_state: "冲绳县"
+ RYU_JAP_nationalist_autonomy_autonomous_state_DEF: "冲绳县"
+ RYU_CHI_democratic: "冲绳自治省"
+ RYU_CHI_democratic_DEF: "冲绳自治省"
+ RYU_CHI_communism: "冲绳自治省"
+ RYU_CHI_communism_DEF: "冲绳自治省"
+ RYU_CHI_fascism: "冲绳自治省"
+ RYU_CHI_fascism_DEF: "冲绳自治省"
+ RYU_CHI_neutrality: "冲绳自治省"
+ RYU_CHI_neutrality_DEF: "冲绳自治省"
+ RYU_CHI_nationalist: "冲绳自治省"
+ RYU_CHI_nationalist_DEF: "冲绳自治省"
+ RYU_TAI_democratic: "冲绳自治省"
+ RYU_TAI_democratic_DEF: "冲绳自治省"
+ RYU_TAI_communism: "冲绳自治省"
+ RYU_TAI_communism_DEF: "冲绳自治省"
+ RYU_TAI_fascism: "冲绳自治省"
+ RYU_TAI_fascism_DEF: "冲绳自治省"
+ RYU_TAI_neutrality: "冲绳自治省"
+ RYU_TAI_neutrality_DEF: "冲绳自治省"
+ RYU_TAI_nationalist: "冲绳自治省"
+ RYU_TAI_nationalist_DEF: "冲绳自治省"
+ RYU_USA_democratic: "琉球群岛政府"
+ RYU_USA_democratic_DEF: "琉球群岛政府"
+ RYU_USA_communism: "琉球群岛政府"
+ RYU_USA_communism_DEF: "琉球群岛政府"
+ RYU_USA_fascism: "琉球群岛政府"
+ RYU_USA_fascism_DEF: "琉球群岛政府"
+ RYU_USA_neutrality: "琉球群岛政府"
+ RYU_USA_neutrality_DEF: "琉球群岛政府"
+ RYU_USA_nationalist: "琉球群岛政府"
+ RYU_USA_nationalist_DEF: "琉球群岛政府"
