--- a/localisation/simp_chinese/MD_focus_CHI_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_CHI_l_simp_chinese.yml
@@ -1465,9 +1465,8 @@
  china.54.b: "我们有别的想法"
  china.55.t: "台海之战结束！"
  china.55.d: "中美在台湾问题上的分歧已不可避免地发展为全面战争。现在我们已经控制了整个台湾岛，台湾当局已经投降了。如果规划台湾的未来成为当前的当务之急，我们该如何选择？"
- china.55.a: "台湾特别行政区今日成立"
- china.55.b: "整个台湾地区终于回到了祖国的怀抱"
- china.55.c: "我们有别的想法"
+ china.55.a: "整个台湾地区终于回到了祖国的怀抱."
+ china.55.b: "我们有别的想法"
  china_news.1.b: "社会主义的新时代！"
  china_news.2.b: "盛大的阅兵式。"
  china_news.21.b: "难以置信！"
@@ -1480,9 +1479,8 @@
  south_china_sea_clash.11.c: "我们应该放弃对这些岛屿的控制。"
  china.56.t: "外蒙古特别军事行动结束！"
  china.56.d: "外蒙古特别军事行动即将结束。面对来自南方的猛烈攻势，乌兰巴托当局毫无悬念地惨败，蒙古高原迎来了昔日的主人。如果规划外蒙古的未来成为当前的当务之急，我们的选择是什么？"
- china.56.a: "外蒙古特别行政区今日成立"
- china.56.b: "整个外蒙古地区终于回到了祖国的怀抱"
- china.56.c: "我们有别的想法"
+ china.56.a: "整个外蒙古地区终于回到了祖国的怀抱"
+ china.56.b: "我们有别的想法"
  china.57.t: "外蒙古特别行政区成立"
  china.57.d: "随着草原与大陆的联系越来越紧密，蒙古当局逐渐意识到自己无法离开中国大陆而生存。以特别行政区的形式加入中国经济圈已成为一个不错的选择。"
  china.57.a: "如果他们想体面，就给他们体面；如果他们不想体面，就帮他们体面。"
@@ -1594,3 +1592,4 @@
  china.65.a: "你所热爱的，就是你的生活。"
  CHI_QQ: "QQ"
  CHI_QQ_desc: "一款自主可控的即时通讯软件是非常有必要的，也能满足人们相互沟通的需求。"
+ CHI_taiwan_strait_war: "台海之战爆发"
