--- a/localisation/simp_chinese/MD_focus_FIJ_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_FIJ_l_simp_chinese.yml
@@ -338,7 +338,7 @@
  fiji_focus_technate_council_emerges: "§t技术官僚委员会成立§!"
  fiji_focus_technate_council_emerges_desc: "斐济许多著名的技术专家都曾出国留学。技术官僚委员会是一个由备受尊敬的经济学家、科学家和其他技术专家组成的团体，他们已经集体形成了自己的权力集团。因此，在看似无尽的混乱和派系斗争中，技术官僚委员会利用他们的关系和影响力，通过直接或间接的方式制服派系领导人。因此，该委员会领导了国家，并将努力使斐济成为人类聪明才智和创新的典范。"
  fiji_focus_a_technocratic_constitution: "技术统治宪法"
- fiji_focus_a_technocratic_constitution_desc: "任何技术统治的基本原则是，管理机构是为了物种的进步，而不是该物种的子类别。因此，我们计划重新起草我们国家的宪法，并制定第一部技术统治宪法。当我们重新起草它时，我们可以分解要点，但现在足以说要点是，虽然我们称自己为斐济人，并且有一个名为斐济的民族国家。从此以后，在这个国家的统治机构之下的任何人都将受到平等对待。人类就是人类，我们就是物种，我们必须共同努力，巩固我们物种的未来和进步。"
+ fiji_focus_a_technocratic_constitution_desc: "任何技官主义的基本原则是，管理机构是为了物种的进步，而不是该物种的具体下属分类。因此，我们计划重新起草我们国家的宪法，并制定第一部技官主义宪法。当我们重新起草它时，我们可以分解要点，但现在足以说要点是，虽然我们称自己为斐济人，并且有一个名为斐济的民族国家。从此以后，在这个国家的统治机构之下的任何人都将受到平等对待。人类就是人类，我们就是物种，我们必须共同努力，巩固我们物种的未来和进步。"
  fiji_focus_human_treatment_amendment: "人道待遇修正案"
  fiji_focus_human_treatment_amendment_desc: "人道待遇修正案明确指出，人类物种的任何成员，无论变异如何，都将被视为人类。这意味着在已知的科学理解范围内，由于信仰、外表或个人身份的差异而对物种的另一成员造成的任何不公正的伤害行为，都将根据刑法中规定的法律受到严厉的惩罚。"
  fiji_focus_voting_requirements_amendment: "投票要求修正案"
@@ -396,7 +396,7 @@
  fiji_focus_research_plan_feast: "研究计划盛宴"
  fiji_focus_research_plan_feast_desc: "为了维持我们作为一个物种和一个社会的成长，我们必须提供最基本的生活条件。一个关键的基本要素是粮食，这一关键将确保社会稳定、人口增长和大多数国家软实力的进步。我们可以找到方法，从根本上增加有针对性的对外援助，并在解决贫困和粮食不安全问题方面引领世界。斐济将成为全球团结的基石。"
  fiji_focus_research_plan_nucleus: "研究计划核心"
- fiji_focus_research_plan_nucleus_desc: "未来确实就是现在。核工程已经取得了如此多的进步，可悲的是，令人厌恶的是，恐吓策略的进步仍然盛行，令人厌恶地无视能源生产的明显现实。因此，我们当然会付出巨大的代价，为如何真正建造核反应堆制定新的全球标准。一种高效、有效的方法，其产量可能会超过其控制的可服务区域。我们制定了这个真实、最安全的标准，可以让任何在核电方面有着劣质过去的国家感到羞愧。对于技术统治来说，我们的物种需要未来，但不知何故似乎不想要。"
+ fiji_focus_research_plan_nucleus_desc: "未来确实就是现在。核工程已经取得了如此多的进步，可悲的是，令人厌恶的是，恐吓策略的进步仍然盛行，令人厌恶地无视能源生产的明显现实。因此，我们当然会付出巨大的代价，为如何真正建造核反应堆制定新的全球标准。一种高效、有效的方法，其产量可能会超过其控制的可服务区域。我们制定了这个真实、最安全的标准，可以让任何在核电方面有着劣质过去的国家感到羞愧。对于技官主义来说，我们的物种需要未来，但不知何故似乎不想要。"
  fiji_influence_defense_through_chaos: "通过混乱影响防御"
  fiji_influence_defense_through_chaos_desc: "斐济自20世纪70年代独立以来，但不幸的是，独立并没有带来我们所希望的荣耀与和平。民事和军事政变、猖獗的种族紧张局势导致该国与世界上大多数国家相比基本上处于停顿状态。然而，随着混乱的出现，也出现了一种天然屏障，因为外国国家担心由于这种混乱而在如此小的地区失去资产。因此，我们的国防水平高于预期，免受外国影响，这无疑是一把双刃剑，但目前对我们有利。"
  fiji_militarized_society: "军事化社会"
@@ -579,7 +579,7 @@
  fiji_news.11.o1: "多么的童话啊"
  fiji_news.11.o2: "§0嗯...可能是一个很好的自我提升§!"
  fiji_news.12.t: "政变破坏稳定"
- fiji_news.12.d: "随着政变的拖延，许多派系现在遭到民众的抗议，许多人想知道国家完全停摆会带来什么后果。有传言称，有一个名为“技术官僚委员会”的派系正在组建，该委员会似乎是斐济技术统治党的秘密政党的一部分。但许多反对政变机构的抗议运动只是希望继续前进，越来越多的迹象出现，要求斐济工党掌权，因为它在选举结果中排名第二。谁会先眨眼呢？"
+ fiji_news.12.d: "随着政变的拖延，许多派系现在遭到民众的抗议，许多人想知道国家完全停摆会带来什么后果。有传言称，有一个名为“技官主义委员会”的派系正在组建，该委员会似乎是斐济技官主义党的秘密政党的一部分。但许多反对政变机构的抗议运动只是希望继续前进，越来越多的迹象出现，要求斐济工党掌权，因为它在选举结果中排名第二。谁会先眨眼呢？"
  fiji_news.12.o1: "§t委员会夺权§!"
  fiji_news.12.o2: "§P人民已经受够了§!"
  fiji_news.400.t: "军事狂热者"
