--- a/localisation/simp_chinese/MD_focus_USA_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_USA_l_simp_chinese.yml
@@ -2084,7 +2084,7 @@
  reformed_republic.5.d: "在美国政治的自由主义者占主导地位的背后，人们注意到领导层内的敌意日益加剧。目前似乎形成了三大主要派系。自由卫士是一种守旧派系，旨在维持党的现状。自由商业协会则致力于进一步推动经济去监管。最后是STEM委员会，这是一个由工程师、化学家和技术专家组成的派系，他们致力于通过科学和理性主义来推动自由的形式。许多人还不确定谁会获胜，但希望无论谁获胜都能保持目前所享有的持续稳定。"
  reformed_republic.5.o1: "自由卫士屹立不倒"
  reformed_republic.5.o2: "商业协会显示实力"
- reformed_republic.5.o3: "stem委员会找到胜利"
+ reformed_republic.5.o3: "stem委员终获胜利"
  crisis_event.1.t: "抗议运动引发恐慌"
  crisis_event.1.d: "最近几天，国内出现了一场危机，一系列针对性的抗议活动引发了日益严重的社会动荡，一些基本服务，比如911和地方应急响应部队受到了阻碍。一些死亡事件被归咎于抗议活动，因为它们导致了紧急服务的延误。一些州长甚至国会议员正在制定应对问题的计划。有些人建议我们让问题在地方上解决，有些人建议动用联邦机构，还有些人建议只是让它自然消退。面对这些抗议活动，总统的官方回应是……"
  crisis_event.1.o1: "我们将观察事态的发展"
