--- a/localisation/english/MD_focus_CHI_l_english.yml
+++ b/localisation/english/MD_focus_CHI_l_english.yml
@@ -1187,15 +1187,13 @@
  
  china.55.t: "The War Over Taiwan Strait End!"
  china.55.d: "The disagreement between China and the United States on the Taiwan issue has inevitably develop into a full-scale war. Now that we have controlled the entire island of Taiwan, the Taiwan authorities have surrendered. If planning the future of Taiwan has become the current top priority, what are our choices?"
- china.55.a: "Taiwan SAR was established today"
- china.55.b: "The entire Taiwan area finally returned to the embrace of the motherland."
- china.55.c: "There are other plan."
+ china.55.a: "The entire Taiwan area finally returned to the embrace of the motherland."
+ china.55.b: "There are other plan."
  
  china.56.t: "The Special Military Operation Over Outer Mongolia End!"
  china.56.d: "The special military operation over Outer Mongolia is coming to an end. Facing the fierce southern offensive, the Ulaanbaatar authorities were defeated without any suspense, and the Mongolian plateau ushered in its former master. If planning the future of Outer Mongolia has become the current top priority, what are our choices?"
- china.56.a: "Outer Mongolia SAR was established today"
- china.56.b: "The entire Outer Mongolia region finally returned to the embrace of the motherland."
- china.56.c: "There are other plan."
+ china.56.a: "The entire Outer Mongolia region finally returned to the embrace of the motherland."
+ china.56.b: "There are other plan."
  
  china.57.t: "Establishment of Outer Mongolia SAR"
  china.57.d: "As the prairie became more and more closely connected with the mainland, the Mongolian authorities gradually realized that they could not survive independently of the Chinese mainland. Joining China's economic circle in the form of a special administrative region has become a good choice."
@@ -1785,3 +1783,4 @@
  TIB_sar_exec: "Tibetan SAR Establish"
  ETK_sar_exec: "Xinjiang SAR Establish"
  jebtsundamba_sat: "9th Jebtsundamba Khutuktu finished sitting-in-the-bed"
+ CHI_taiwan_strait_war: "The Taiwan Strait War Erupted"
