--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -5744,11 +5744,11 @@
  KOJ_neutrality_DEF: "The Seventh Republic of Korea"
  KOJ_nationalist: "Seventh Republic of Korea"
  KOJ_nationalist_DEF: "The Seventh Republic of Korea"
- KOJ_democratic_ADJ: "Chilgong Korean"
- KOJ_communism_ADJ: "Chilgong Korean"
- KOJ_fascism_ADJ: "Chilgong Korean"
- KOJ_neutrality_ADJ: "Chilgong Korean"
- KOJ_nationalist_ADJ: "Chilgong Korean"
+ KOJ_democratic_ADJ: "Korean"
+ KOJ_communism_ADJ: "Korean"
+ KOJ_fascism_ADJ: "Korean"
+ KOJ_neutrality_ADJ: "Korean"
+ KOJ_nationalist_ADJ: "Korean"
  
  JPC_democratic: "National United Government of Japan"
  JPC_democratic_DEF: "The National United Government of Japan"
@@ -5760,11 +5760,11 @@
  JPC_neutrality_DEF: "The National United Government of Japan"
  JPC_nationalist: "National United Government of Japan"
  JPC_nationalist_DEF: "The National United Government of Japan"
- JPC_democratic_ADJ: "Protectionist Japanese"
- JPC_communism_ADJ: "Protectionist Japanese"
- JPC_fascism_ADJ: "Protectionist Japanese"
- JPC_neutrality_ADJ: "Protectionist Japanese"
- JPC_nationalist_ADJ: "Protectionist Japanese"
+ JPC_democratic_ADJ: "Japanese Protectionist Government"
+ JPC_communism_ADJ: "Japanese Protectionist Government"
+ JPC_fascism_ADJ: "Japanese Protectionist Government"
+ JPC_neutrality_ADJ: "Japanese Protectionist Government"
+ JPC_nationalist_ADJ: "Japanese Protectionist Government"
  
  JPK_democratic: "Nippon Restoration Government"
  JPK_democratic_DEF: "The Nippon Restoration Government"
@@ -5776,24 +5776,24 @@
  JPK_neutrality_DEF: "The Nippon Restoration Government"
  JPK_nationalist: "Nippon Restoration Government"
  JPK_nationalist_DEF: "The Nippon Restoration Government"
- JPK_democratic_ADJ: "Restorationist Japanese"
- JPK_communism_ADJ: "Restorationist Japanese"
- JPK_fascism_ADJ: "Restorationist Japanese"
- JPK_neutrality_ADJ: "Restorationist Japanese"
- JPK_nationalist_ADJ: "Restorationist Japanese"
+ JPK_democratic_ADJ: "Japanese Restorationist Government"
+ JPK_communism_ADJ: "Japanese Restorationist Government"
+ JPK_fascism_ADJ: "Japanese Restorationist Government"
+ JPK_neutrality_ADJ: "Japanese Restorationist Government"
+ JPK_nationalist_ADJ: "Japanese Restorationist Government"
  
- JPW_democratic: "Western Provisional State of Japan"
- JPW_democratic_DEF: "The Western Provisional State of Japan"
- JPW_communism: "Western Provisional State of Japan"
- JPW_communism_DEF: "The Western Provisional State of Japan"
- JPW_fascism: "Western Provisional State of Japan"
- JPW_fascism_DEF: "The Western Provisional State of Japan"
- JPW_neutrality: "Western Provisional State of Japan"
- JPW_neutrality_DEF: "The Western Provisional State of Japan"
- JPW_nationalist: "Western Provisional State of Japan"
- JPW_nationalist_DEF: "The Western Provisional State of Japan"
- JPW_democratic_ADJ: "Provisional Japanese"
- JPW_communism_ADJ: "Provisional Japanese"
- JPW_fascism_ADJ: "Provisional Japanese"
- JPW_neutrality_ADJ: "Provisional Japanese"
- JPW_nationalist_ADJ: "Provisional Japanese"
+ JPW_democratic: "Western Provisional Government of Japan"
+ JPW_democratic_DEF: "The Western Provisional Government of Japan"
+ JPW_communism: "Western Provisional Government of Japan"
+ JPW_communism_DEF: "The Western Provisional Government of Japan"
+ JPW_fascism: "Western Provisional Government of Japan"
+ JPW_fascism_DEF: "The Western Provisional Government of Japan"
+ JPW_neutrality: "Western Provisional Government of Japan"
+ JPW_neutrality_DEF: "The Western Provisional Government of Japan"
+ JPW_nationalist: "Western Provisional Government of Japan"
+ JPW_nationalist_DEF: "The Western Provisional Government of Japan"
+ JPW_democratic_ADJ: "Japanese Provisional Government"
+ JPW_communism_ADJ: "Japanese Provisional Government"
+ JPW_fascism_ADJ: "Japanese Provisional Government"
+ JPW_neutrality_ADJ: "Japanese Provisional Government"
+ JPW_nationalist_ADJ: "Japanese Provisional Government"
